Implemented Switch functionality in BillingFragment.

--- a/app/src/main/res/layout/fragment_billing.xml
+++ b/app/src/main/res/layout/fragment_billing.xml
@@ -18,6 +18,7 @@
             android:id="@+id/fragmentContainerForCameraBILLING"
             android:layout_width="300dp"
             android:layout_height="300dp"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
