--- a/app/src/main/res/layout/fragment_billing.xml
+++ b/app/src/main/res/layout/fragment_billing.xml
@@ -83,7 +83,7 @@
             app:layout_constraintTop_toTopOf="@id/add_upc_edt" />
 
         <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/cam_switch"
+            android:id="@+id/billing_cam_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="28dp"
@@ -144,18 +144,17 @@
                 android:text="Price" />
         </LinearLayout>
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragment_container"
-            android:name="com.bohanee.jcp.hrai.RecyclerViewFragment"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/items_rv"
             android:layout_width="0dp"
             android:layout_height="500dp"
             android:visibility="visible"
+            tools:listitem="@layout/list_item_billing"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/list_heading"
-            tools:layout="@layout/fragment_recycler_view">
+            app:layout_constraintTop_toBottomOf="@+id/list_heading">
 
-        </androidx.fragment.app.FragmentContainerView>
+        </androidx.recyclerview.widget.RecyclerView>
 
         <TextView
             android:id="@+id/item_total_tv"
@@ -167,7 +166,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_container" />
+            app:layout_constraintTop_toBottomOf="@+id/items_rv" />
 
         <TextView
             android:id="@+id/tax_tv"
@@ -199,7 +198,7 @@
             android:layout_height="wrap_content"
             android:text="₹ 0"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/fragment_container"
+            app:layout_constraintEnd_toEndOf="@+id/items_rv"
             app:layout_constraintTop_toTopOf="@+id/item_total_tv" />
 
         <TextView
