--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -57,14 +57,13 @@
         android:text="PhoneNumber"
         android:textSize="16sp" />
 
-    <EditText
+    <TextView
         android:id="@+id/ph_no_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Enter your phone number"
-        android:inputType="number"
+        android:hint="+91-0000000000"
         android:minHeight="48dp"
         android:textColor="#000"
         android:textColorHint="#000"
