--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -58,7 +58,7 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/ph_no_et"
+        android:id="@+id/ph_no_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
