Removed name field from User database since it was causing UNIQUE_CONSTRAINT_FAILED bug, Fixed constraint for PhoneAuthActivity.

--- a/app/src/main/res/layout/activity_phone_auth.xml
+++ b/app/src/main/res/layout/activity_phone_auth.xml
@@ -121,14 +121,26 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="12dp"
+        android:layout_marginEnd="28dp"
         android:background="@drawable/red_rounded_edittext"
         android:ems="10"
         android:gravity="center"
         android:inputType="number"
         android:maxLength="1"
         android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/otp_edittext5"
         app:layout_constraintTop_toTopOf="@+id/otp_edittext5" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Didn't receive the OTP?"
+        android:textColor="#000000"
+        app:layout_constraintStart_toStartOf="@+id/otp_edittext1"
+        app:layout_constraintTop_toBottomOf="@+id/otp_edittext1" />
 
     <ImageView
         android:id="@+id/loading_img"
